Fixed image overflow bug on mobile

--- a/css/chat-dark.scss
+++ b/css/chat-dark.scss
@@ -263,8 +263,8 @@ main {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 2;
   background: rgba(0, 0, 0, 0.548);
   transition: ease-in-out 0.2s;
@@ -402,8 +402,8 @@ main {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -580,8 +580,8 @@ main {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -654,8 +654,8 @@ main {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -766,8 +766,8 @@ main {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 2;
   display: flex;
   justify-content: center;
