--- a/css/chat-light.scss
+++ b/css/chat-light.scss
@@ -264,8 +264,8 @@ main {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 2;
   background: rgba(0, 0, 0, 0.548);
   transition: ease-in-out 0.2s;
@@ -404,8 +404,8 @@ main {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -584,8 +584,8 @@ main {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -659,8 +659,8 @@ main {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -772,8 +772,8 @@ main {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 2;
   display: flex;
   justify-content: center;
